Fix text overflow in Playlist widget

--- a/src/css/components/Playlist.scss
+++ b/src/css/components/Playlist.scss
@@ -17,8 +17,12 @@
     }
 
     h3 {
+        width: 200px;
         margin: 0;
         font-size: 20px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     p {
